--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "Algebric structures, higher-kinded types and other category theor
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+repository = "https://github.com/cando/Algar"
 keywords = ["category theory", "functional programming", "monad", "monad transformes"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
