Fix package keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/cando/Algar"
-keywords = ["category theory", "functional programming", "monad", "monad transformes"]
+keywords = ["category-theory", "functional-programming", "monad", "monad-transformes"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
