--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "algar"
 authors = ["Stefano Candori <stefano.candori@prima.it>"]
 description = "Algebraic structures, higher-kinded types and other category theory bad ideas"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/cando/Algar"
 homepage = "https://github.com/cando/Algar"
-keywords = ["category-theory", "fp", "monad", "monad-transformers", "functional"]
+keywords = ["category-theory", "fp", "monad", "monads" , "monad-transformers", "functional"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
